# renamer-rust

./: .gitignore  CHANGELOG-v0.md  Cargo.toml  README.md  config.json
.github/workflows/: publish.yml
lib/: Cargo.toml  README.md
lib/src/: app.rs  colors.rs  config.rs  lib.rs  renamer.rs  stats.rs  types.rs  verbose.rs
src/: app.rs  main.rs
