[package]
name = "renamer_app"
description = "Rename files to a specific format in a folder and/or subfolders based on a given configuration file."
version = "0.1.0-dev.1"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/renamer-rust"
documentation = "https://github.com/TheFox/renamer-rust"
repository = "https://github.com/TheFox/renamer-rust"
keywords = ["rename", "files"]
categories = ["command-line-interface", "filesystem"]
edition = "2018"
default-run = "renamer"

[build-dependencies]
chrono = "0.4"

[dependencies]

[dependencies.renamer_lib]
path = "lib"
#version = "0.1"
features = ["production"]

[workspace]
members = [
    "lib",
]

[profile.release]
panic = 'abort'

[[bin]]
name = "renamer"
path = "src/main.rs"
