[package]
name = "renamer_lib"
description = "Renamer Library for Renamer App."
version = "0.1.0-dev.1"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/renamer-rust"
documentation = "https://github.com/TheFox/renamer-rust"
repository = "https://github.com/TheFox/renamer-rust"
keywords = ["rename", "files"]
categories = ["command-line-interface", "filesystem"]
edition = "2018"

[dependencies]
regex = "~1.5"
